swin_transformer.ipynb

--- a/swin_transformer.ipynb
+++ b/swin_transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +82,9 @@
     "])\n",
     "\n",
     "# Define paths to your data folders\n",
-    "train_data_dir = '/u/45/muhammu2/data/Desktop/sample/train/'\n",
-    "val_data_dir = '/u/45/muhammu2/data/Desktop/sample/validation/'\n",
-    "test_data_dir = '/u/45/muhammu2/data/Desktop/sample/test/'\n",
+    "train_data_dir = '/u/45/muhammu2/data/Desktop/spoofing/Evaluation/Evaluation/CASIA_dataset/training_set/'\n",
+    "val_data_dir = '/u/45/muhammu2/data/Desktop/spoofing/Evaluation/Evaluation/CASIA_dataset/testing_set/'\n",
+    "test_data_dir = '/u/45/muhammu2/data/Desktop/spoofing/Evaluation/Evaluation/REPLAY_ATTACK/test/'\n",
     "\n",
     "# Load your training, validation, and test datasets using ImageFolder\n",
     "train_dataset = ImageFolder(root=train_data_dir, transform=transform)\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,40 +132,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 0.3788468845296544\n",
-      "Epoch 2, Loss: 0.6873174860342665\n",
-      "Epoch 3, Loss: 0.4522270955446099\n",
-      "Epoch 4, Loss: 0.824730728732215\n",
-      "Epoch 5, Loss: 0.728653063128392\n",
-      "Epoch 6, Loss: 0.6552167437142796\n",
-      "Epoch 7, Loss: 0.6102460091312726\n",
-      "Epoch 8, Loss: 0.5600078804625406\n",
-      "Epoch 9, Loss: 0.5628713816404343\n",
-      "Epoch 10, Loss: 0.5543751569257842\n",
-      "Epoch 11, Loss: 0.5527727069126235\n",
-      "Epoch 12, Loss: 0.5515613300932778\n",
-      "Epoch 13, Loss: 0.5490215427345699\n",
-      "Epoch 14, Loss: 0.5458023048109478\n",
-      "Epoch 15, Loss: 0.5432438977890545\n",
-      "Epoch 16, Loss: 0.5421073281102711\n",
-      "Epoch 17, Loss: 0.5428270142939355\n",
-      "Epoch 18, Loss: 0.5416805358396636\n",
-      "Epoch 19, Loss: 0.5407051985462507\n",
-      "Epoch 20, Loss: 0.5406475883391169\n"
+      "Epoch 1, Loss: 0.9740797275221363\n",
+      "Epoch 2, Loss: 0.7436136086781819\n",
+      "Epoch 3, Loss: 0.7569213130821785\n",
+      "Epoch 4, Loss: 0.716347782810529\n",
+      "Epoch 5, Loss: 0.6177003075679143\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# Training loop\n",
-    "num_epochs = 20  # Modify this as needed\n",
+    "num_epochs = 5  # Modify this as needed\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "model.to(device)\n",
     "\n",
@@ -186,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation EER: 33.3333, EER Threshold: 0.2265\n"
+      "Validation EER: 46.6667, EER Threshold: 0.2698\n"
      ]
     }
    ],
@@ -226,14 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HTER: 32.47%\n"
+      "HTER: 17.08%\n"
      ]
     }
    ],
@@ -265,14 +250,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC on the testing set: 43.55\n"
+      "Equal Error Rate (EER) on validation set: 46.67%\n",
+      "Half Total Error Rate (HTER) for Face Anti-Spoofing: 0.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Assuming you have the predicted probabilities for the positive class (spoofed) from your model\n",
+    "# Compute the ROC curve on the validation set\n",
+    "fpr, tpr, thresholds = roc_curve(val_labels, val_scores, pos_label=1)\n",
+    "\n",
+    "# Calculate EER on the validation set\n",
+    "eer = fpr[np.nanargmin(np.abs(fpr - (1 - tpr)))]\n",
+    "\n",
+    "# Find the threshold where FAR equals FRR (EER threshold)\n",
+    "eer_threshold = thresholds[np.nanargmin(np.abs(fpr - (1 - tpr)))]\n",
+    "\n",
+    "# Apply the EER threshold to the test set predictions\n",
+    "predictions_test = (test_scores > eer_threshold).astype(int)\n",
+    "\n",
+    "# Calculate HTER on the test set\n",
+    "false_acceptance = np.sum((predictions_test == 1) & (test_labels == 0))\n",
+    "false_rejection = np.sum((predictions_test == 0) & (test_labels == 1))\n",
+    "total_samples_test = len(test_labels)\n",
+    "\n",
+    "hter = (false_acceptance + false_rejection) / (2 * total_samples_test)\n",
+    "\n",
+    "# Display EER and HTER\n",
+    "print(f\"Equal Error Rate (EER) on validation set: {eer:.2%}\")\n",
+    "print(f\"Half Total Error Rate (HTER) for Face Anti-Spoofing: {hter:.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC on the testing set: 46.37\n"
      ]
     }
    ],
