--- a/vit_transformer.ipynb
+++ b/vit_transformer.ipynb
@@ -71,9 +71,9 @@
     "])\n",
     "\n",
     "# Define paths to your data folders\n",
-    "train_data_dir = '/u/45/muhammu2/data/Desktop/sample/train/'\n",
-    "val_data_dir = '/u/45/muhammu2/data/Desktop/sample/validation/'\n",
-    "test_data_dir = '/u/45/muhammu2/data/Desktop/sample/test/'\n",
+    "train_data_dir = '/u/45/muhammu2/data/Desktop/spoofing/Evaluation/Evaluation/CASIA_dataset/training_set/'\n",
+    "val_data_dir = '/u/45/muhammu2/data/Desktop/spoofing/Evaluation/Evaluation/CASIA_dataset/testing_set/'\n",
+    "test_data_dir = '/u/45/muhammu2/data/Desktop/spoofing/Evaluation/Evaluation/REPLAY_ATTACK/test/'\n",
     "\n",
     "# Load your training, validation, and test datasets using ImageFolder\n",
     "train_dataset = ImageFolder(root=train_data_dir, transform=transform)\n",
@@ -128,22 +128,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 0.2675505539816287\n",
-      "Epoch 2, Loss: 0.05120344125251803\n",
-      "Epoch 3, Loss: 0.049050706945773626\n",
-      "Epoch 4, Loss: 0.037369880049178995\n",
-      "Epoch 5, Loss: 0.003922998147188789\n",
-      "Epoch 6, Loss: 0.002384590680917932\n",
-      "Epoch 7, Loss: 0.0017179004007226062\n",
-      "Epoch 8, Loss: 0.0013130273062011435\n",
-      "Epoch 9, Loss: 0.001040469294336314\n",
-      "Epoch 10, Loss: 0.0008459321449562493\n"
+      "Epoch 1, Loss: 0.2218002966294686\n",
+      "Epoch 2, Loss: 0.02322181498166174\n",
+      "Epoch 3, Loss: 0.008316007058601827\n",
+      "Epoch 4, Loss: 0.004743607986407976\n",
+      "Epoch 5, Loss: 0.0033808762673288584\n"
      ]
     }
    ],
    "source": [
     "# Training loop\n",
-    "num_epochs = 10  # Modify this as needed\n",
+    "num_epochs = 5  # Modify this as needed\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "model.to(device)\n",
     "\n",
@@ -171,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation EER: 0.0000, EER Threshold: 0.0038\n"
+      "Validation EER: 0.0000, EER Threshold: 0.9801\n"
      ]
     }
    ],
@@ -204,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HTER using EER threshold: 34.86%\n"
+      "HTER using EER threshold: 9.27%\n"
      ]
     }
    ],
@@ -236,14 +231,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC on the testing set: 68.13\n"
+      "Equal Error Rate (EER) on validation set: 0.00%\n",
+      "Half Total Error Rate (HTER) for Face Anti-Spoofing: 0.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming you have the predicted probabilities for the positive class (spoofed) from your model\n",
+    "# Compute the ROC curve on the validation set\n",
+    "fpr, tpr, thresholds = roc_curve(val_labels, val_scores, pos_label=1)\n",
+    "\n",
+    "# Calculate EER on the validation set\n",
+    "eer = fpr[np.nanargmin(np.abs(fpr - (1 - tpr)))]\n",
+    "\n",
+    "# Find the threshold where FAR equals FRR (EER threshold)\n",
+    "eer_threshold = thresholds[np.nanargmin(np.abs(fpr - (1 - tpr)))]\n",
+    "\n",
+    "# Apply the EER threshold to the test set predictions\n",
+    "predictions_test = (test_scores > eer_threshold).astype(int)\n",
+    "\n",
+    "# Calculate HTER on the test set\n",
+    "false_acceptance = np.sum((predictions_test == 1) & (test_labels == 0))\n",
+    "false_rejection = np.sum((predictions_test == 0) & (test_labels == 1))\n",
+    "total_samples_test = len(test_labels)\n",
+    "\n",
+    "hter = (false_acceptance + false_rejection) / (2 * total_samples_test)\n",
+    "\n",
+    "# Display EER and HTER\n",
+    "print(f\"Equal Error Rate (EER) on validation set: {eer:.2%}\")\n",
+    "print(f\"Half Total Error Rate (HTER) for Face Anti-Spoofing: {hter:.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC on the testing set: 83.55\n"
      ]
     }
    ],
